--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Product Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+}
+
 body {
   padding: 0 !important;
-  background-color: #f4f6fa;
+  background-color: #070707;
+  font-family: Product Sans;
 }
